cloudformation-app.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy Flask Docker App on EC2

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName

  DockerImage:
    Type: String

Resources:

  FlaskSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH & Flask
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0

EC2Role:
  Type: AWS::IAM::Role
  Properties:
    AssumeRolePolicyDocument:
      Version: '2012-10-17'
      Statement:
        - Effect: Allow
          Principal:
            Service: ec2.amazonaws.com
          Action: sts:AssumeRole
    ManagedPolicyArns:
      - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly

EC2InstanceProfile:
  Type: AWS::IAM::InstanceProfile
  Properties:
    Roles:
      - !Ref EC2Role

  FlaskInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0e2c8caa4b6378d8c  # Ubuntu 22.04 (update if needed)
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref EC2InstanceProfile
      SecurityGroupIds:
        - !Ref FlaskSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt update -y
          apt install -y docker.io awscli
          systemctl start docker
          systemctl enable docker

         # Login to ECR
          aws ecr get-login-password --region ${AWS_REGION} | docker login --username Jenkins2  --password-stdin ${DockerImage%/*}

          # Pull and run Docker image
          docker stop flask-app || true
          docker rm flask-app || true
          docker pull ${DockerImage}
          docker run -d --name flask-app -p 5000:5000 ${DockerImage}

Outputs:
  PublicIP:
    Value: !GetAtt FlaskInstance.PublicIp
